--- a/src/sass/global.sass
+++ b/src/sass/global.sass
@@ -369,8 +369,12 @@ input
 
 .flex-horizontal
 	display: flex
-	-webkit-flex-flow: row wrap
-	justify-content: space-around
+	flex-direction: row
+	flex-wrap: wrap
+	justify-content: space-between
+	align-items: stretch
+	align-content: stretch
+	// justify-content: space-around
 .flex-item
 	text-align: left
 
