--- a/src/index.jade
+++ b/src/index.jade
@@ -153,7 +153,7 @@ html(lang='ru', ng-app="dentApp")
 								'img/content/side-2.png'
 							)
 
-					.service-directory(ng-controller="servicesCtrl")
+					.service-directory(ng-controller="servController")
 						.main-modal(class="ng-class: respSt ? '': 'open'")
 							.close-btn(ng-click="closeModal()")
 							.modal-inner
@@ -163,7 +163,7 @@ html(lang='ru', ng-app="dentApp")
 							h3 Service Directory
 								a(href="#").add-button Add New Service
 						.services-list
-							.inline-layout.flex-horizontal
+							.inline-layout
 								.service-block.flex-item(ng-repeat="item in services")
 									a(href="#")
 										.image-block
